--- a/debugger-mcp/package.json
+++ b/debugger-mcp/package.json
@@ -1,9 +1,11 @@
 {
   "name": "puppeteer-debugger-mcp",
   "version": "1.0.0",
+  "private": false,
   "description": "MCP Server for browser debugging via CDP",
   "main": "dist/index.js",
   "type": "module",
+  "packageManager": "pnpm@10.22.0",
   "bin": {
     "puppeteer-debugger-mcp": "./dist/index.js"
   },
@@ -23,7 +25,10 @@
     "cdp",
     "puppeteer"
   ],
-  "author": "",
+  "author": {
+    "name": "ALIEX7664",
+    "url": "https://github.com/ALIEX7664"
+  },
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.24.3",
@@ -32,7 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "tsup": "^8.0.0"
+    "tsup": "^8.0.0",
+    "typescript": "^5.0.0"
   }
 }
