chore(config): 更新 author 信息
- 将 author.name 改为小写格式
- 更新 author.url 为具体的 GitHub 仓库路径

--- a/debugger-mcp/package.json
+++ b/debugger-mcp/package.json
@@ -26,8 +26,8 @@
     "puppeteer"
   ],
   "author": {
-    "name": "ALIEX7664",
-    "url": "https://github.com/ALIEX7664"
+    "name": "aliex7664",
+    "url": "https://github.com/ALIEX7664/mcp/tree/main/debugger-mcp"
   },
   "publishConfig": {
     "access": "public"
